welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:4: error: j is already defined as variable j
var j = 0;
    ^